--- a/analysis/markdown/AckermanLibrary.bib
+++ b/analysis/markdown/AckermanLibrary.bib
@@ -293,6 +293,16 @@
   file = {C\:\\Users\\mikea\\Zotero\\storage\\9VUXX6RV\\Ayllon et al. - 2015 - The vgll3 Locus Controls Age at Maturity in Wild a.pdf;C\:\\Users\\mikea\\Zotero\\storage\\AJMK2CY3\\Ayllon et al. - 2015 - The vgll3 Locus Controls Age at Maturity in Wild a.pdf}
 }
 
+@article{Bailey1951,
+  title = {On {{Estimating}} the {{Size}} of {{Mobile Populations}} from {{Recapture Data}}},
+  author = {Bailey, Norman T.J.},
+  year = {1951},
+  journal = {Biometrika},
+  volume = {38},
+  pages = {293--306},
+  doi = {10.2307/2332575}
+}
+
 @article{Barson2015,
   title = {Sex-Dependent Dominance at a Single Locus Maintains Variation in Age at Maturity in Salmon},
   author = {Barson, Nicola J. and Aykanat, Tutku and Hindar, Kjetil and Baranski, Matthew and Bolstad, Geir H. and Fiske, Peder and Jacq, C{\'e}leste and Jensen, Arne J. and Johnston, Susan E. and Karlsson, Sten and Kent, Matthew and Moen, Thomas and Niemel{\"a}, Eero and Nome, Torfinn and N{\ae}sje, Tor F. and Orell, Panu and Romakkaniemi, Atso and S{\ae}grov, Harald and Urdal, Kurt and Erkinaro, Jaakko and Lien, Sigbj{\o}rn and Primmer, Craig R.},
@@ -973,6 +983,16 @@
   abstract = {Stream habitat restoration is an important tool for fisheries management in impaired lotic systems. Although small-scale benefits of stream habitat restoration are commonly investigated, it is difficult to demonstrate population effects. The Pahsimeroi River Chinook salmon Oncorhynchus tshawytscha population was previously restricted to the lower portion of the river by multiple irrigation structures. To address fish passage issues, a combination of restoration projects was initiated including barrier removals, instream flow enhancements and installation of fish screens on diversions. The largest barrier was removed in 2009, more than doubling the amount of accessible linear habitat. We hypothesized restoration efforts would expand the distribution of spawning salmon in the Pahsimeroi River watershed, leading to a broader distribution of juveniles. We also hypothesized a broader juvenile distribution would have population effects by reducing the prevalence of densitydependent growth and survival. Redds were documented in newly accessible habitat immediately following barrier removal and accounted for a median of 42\% of all redds in the Pahsimeroi River watershed during 2009\textendash 2015. Snorkel surveys also documented juvenile rearing in newly accessible habitat. Juvenile productivity increased from a median of 64 smolts/female spawner for brood years 2002\textendash 2008 to 99 smolts/female spawner for brood years 2009\textendash 2014. Overall, results suggested increased habitat accessibility in the Pahsimeroi River broadened the distribution of spawning adult and rearing juvenile salmon and reduced the effects of densitydependent survival. Large-scale stream restoration efforts can have a population effect. Despite the large-scale effort and response, habitat restoration alone is likely not sufficient to restore this population.},
   langid = {english},
   file = {C\:\\Users\\mikea\\Zotero\\storage\\NCPW7I56\\Copeland2021.pdf}
+}
+
+@techreport{Copeland2021a,
+  title = {Protocols for {{Trapping Anadromous Emigrants}} in {{Idaho}}},
+  author = {Copeland, Timothy and Barnett, Bruce and Schrader, William C. and Apperson, Kimberly A. and Janssen, Laurie and Roberts, Ronald V.},
+  year = {2021},
+  number = {IDFG Report Number 21-05},
+  pages = {93},
+  langid = {english},
+  file = {C\:\\Users\\mikea\\Zotero\\storage\\8JL8N6H2\\Barnett - PROTOCOLS FOR TRAPPING ANADROMOUS EMIGRANTS IN IDA.pdf}
 }
 
 @article{Correa2017,
@@ -3761,6 +3781,21 @@
   doi = {10.1002/fsh.10260},
   langid = {english},
   file = {C\:\\Users\\mikea\\Zotero\\storage\\XBCCXQ8E\\Steele et al. - 2019 - Parentage‐Based Tagging Reviewing the Implementat.pdf}
+}
+
+@article{Steinhorst2004,
+  title = {Confidence Intervals for Fish Out-Migration Estimates Using Stratified Trap Efficiency Methods},
+  author = {Steinhorst, Kirk and Wu, Yingqin and Dennis, Brian and Kline, Paul},
+  year = {2004},
+  month = sep,
+  journal = {Journal of Agricultural, Biological, and Environmental Statistics},
+  volume = {9},
+  number = {3},
+  pages = {284--299},
+  issn = {1085-7117, 1537-2693},
+  doi = {10.1198/108571104X3325},
+  langid = {english},
+  file = {C\:\\Users\\mikea\\Zotero\\storage\\5YS2FK9I\\Steinhorst et al. - 2004 - Confidence intervals for fish out-migration estima.pdf}
 }
 
 @article{Steinhorst2010,
