--- a/analysis/markdown/DSR_NRR_Comparison.Rmd
+++ b/analysis/markdown/DSR_NRR_Comparison.Rmd
@@ -27,6 +27,17 @@ institute:
   - biomark: Biomark, Inc., 705 South 8th Street, Boise, Idaho, 83702, USA
 date: "`r format(Sys.time(), '%d %B, %Y')`" 
 output:
+  bookdown::word_document2:
+    fig_caption: yes
+    reference_docx: "../templates/template.docx"
+    number_sections: FALSE
+    toc: no
+    always_allow_html: true
+    fig_width: 6
+    pandoc_args:
+    - --lua-filter=../templates/scholarly-metadata.lua
+    - --lua-filter=../templates/author-info-blocks.lua
+    - --lua-filter=../templates/pagebreak.lua
   bookdown::html_document2:
     theme: yeti
     toc: yes
@@ -39,22 +50,17 @@ output:
     - --lua-filter=../templates/scholarly-metadata.lua
     - --lua-filter=../templates/author-info-blocks.lua
     - --lua-filter=../templates/pagebreak.lua
-  bookdown::word_document2:
-    fig_caption: yes
-    reference_docx: "../templates/template.docx"
-    number_sections: FALSE
-    toc: no
-    always_allow_html: true
-    fig_width: 6
-    pandoc_args:
-    - --lua-filter=../templates/scholarly-metadata.lua
-    - --lua-filter=../templates/author-info-blocks.lua
-    - --lua-filter=../templates/pagebreak.lua
 csl: "../templates/american-fisheries-society.csl"
 bibliography:
   - AckermanLibrary.bib
 always_allow_html: yes
 ---
+
+<style>
+p.caption {
+  font-size: 0.8em;
+}
+</style>
 
 ```{r setup, echo = FALSE, message = F, warning = F}
 library(here)
@@ -71,6 +77,8 @@ knitr::opts_chunk$set(
   dpi = 300
 )
 
+options(knitr.kable.NA = '--')
+
 ```
 
 ```{r packages, message = FALSE}
@@ -84,6 +92,7 @@ library(rstan)
 library(readxl)
 
 theme_set(theme_bw())
+
 ```
 
 ```{r load-data}
@@ -179,13 +188,13 @@ Recently, the DSR life history has dominated within the Lemhi River population i
 
 # Methods
 
-## Data
+## Mark Data
 
 We compiled a list of all PIT tags deployed within the Lemhi River using two PTAGIS queries. The first was a "Tagging Details" query, with filters set such that the mark subbasin is Lemhi, capture method is screw trap, species is Chinook, and mark year is 1986-2020. We filtered these results further to focus on fish tagged at the lower Lemhi RST, which are assumed to be emigrating out of the Lemhi River, by focuing on mark site codes "LEMHIR" or "LLRTP" (the former was used prior to 2016) and filtering out any tags released at LEMHIW (the upper Lemhi RST). The second was a "Recapture Details" query, with similar filters set: mark subbasin is Lemhi, capture method is screw trap, species is Chinook, and recap year is 1986-2020. Again, we further refined these results by filtering for recapture site code of "LEMHIR" or "LLRTP", and recapture released that were not released at LEMHIW.
 
 These two queries often resulted in tags showing up in both the mark and recapture lists. For tags recaptured within a week of marking, we used the mark date as the starting point, but for fish recaptured more than a week after marking (sometimes months later) we used the maximum recapture date to indicate when we believe that fish left the Lemhi River.
 
-We further filtered out tags that were less than 25 mm or greater than 200 mm as these seemed to be either fry, precocials, or errant sizes, and thus, were not assigned to the DSR or NRR strategies. Generally, parr and presmolts were classified as DSR whereas smolts were classified as NRR. Size and time of capture were used to differentiate smolts and parr were used to distinguish DSR and NRR during the spring period when both migratory types were captured concurrently (Figure \@ref(fig:lem-size-date-fig)). DSR fish were assigned a brood year on year prior to their emigration date in the fall, and NRR fish were assigned a brood year two years prior. The number of tags assigned to each brood year and emigrant strategy are shown in Table \@ref(tab:lh-tags-tab).
+We further filtered out tags that were less than 25 mm or greater than 200 mm as these seemed to be either fry, precocials, or errant sizes, and thus, were not assigned to the DSR or NRR strategies. Generally, parr and presmolts were classified as DSR whereas smolts were classified as NRR. Size and time of capture were used to differentiate smolts and parr as DSR or NRR during the spring period when both migratory types were captured concurrently (Figure \@ref(fig:lem-size-date-fig)). DSR fish were assigned a brood year on year prior to their emigration date in the fall, and NRR fish were assigned a brood year two years prior. The number of tags assigned to each brood year and emigrant strategy are shown in Table \@ref(tab:lh-tags-tab).
 
 ```{r lh-tags-tab}
 tags_tab = obs_df %>%
@@ -207,8 +216,50 @@ tags_tab = obs_df %>%
   adorn_totals() %>%
   kbl(caption = "Number of PIT tags deployed at Lower Lemhi rotary screw trap by brood year and life history type.",
       format.args = list(big.mark = ",")) %>%
-  kable_styling(position = "center", full_width = F)
+  kable_styling(position = "center", 
+                full_width = F,
+                bootstrap_options = c("striped", "condensed"))
 tags_tab
+
+```
+
+```{r lem-size-date-fig, fig.cap = "Separation of natal-reach rearing (NRR) and downstream-rearing (DSR) types of Chinook salmon based on length and time of capture at the lower Lemhi rotary screw trap, brood years 2004-2019. Vertical lines indicate the period of time when the two strategies overlapped."}
+#lem_rst_tags = read_rds(here("analysis/data/derived_data/lemhi_rst_tags_cleaned.rds"))
+
+# size and time plot by strategy (DSR, NRR)
+strategy_p = lem_tags %>%
+  select(tag_code,
+         brood_year,
+         date,
+         length,
+         emig_stage,
+         strategy) %>%ggplot(aes(x = as.Date(yday(date), "1900-01-01"),
+             y = length)) +
+  geom_point(aes(
+    color = fct_rev(strategy))) +
+  geom_vline(xintercept = as.Date("1900-05-02")) +
+  geom_vline(xintercept = as.Date("1900-07-25")) +
+  scale_fill_brewer(palette = "Set2",
+                    name = "Strategy") +
+  # scale_color_manual(name = "Strategy",
+  #                    values = c("orangered2", "dodgerblue2")) +
+  scale_x_date(date_breaks = "months",
+               date_labels = "%b") +
+  theme_classic() +
+  labs(x = "Date Tagged",
+       y = "Fork Length (mm)",
+       color = "Strategy") +
+  theme(axis.title.x = element_text(size = 11,
+                                    color = "black"),
+        axis.title.y = element_text(size = 11,
+                                    color = "black"),
+        axis.text.x = element_text(size = 11,
+                                   color = "black"),
+        axis.text.y = element_text(size = 11,
+                                   color = "black"),
+        #legend.position = c(0.5, 0.9)
+        legend.position = "top")
+strategy_p
 
 ```
 
@@ -223,19 +274,30 @@ $$
 \hat{N} = \sum\limits_{i=1}^k c_i(m_i + 1)(r_i + 1)
 $$
 
-where $\hat{N}$ is the estimate of abundance in a given season or year, $i$ is season, $c_i$ is the number of all unique fish captures in season $i$, $m_i$ is the number of tagged fish released in season $i$, and $r_i$ is the number of recaptures in season $i$ [@Bailey1951]. The estimator is computed using an interative maximization of the log likelihood [@Steinhorst2004]. The method assumes that fish are captured independently with probability $p$ (equivalent to trap efficiency) and tagged fish mix thoroughly with untagged fish. The 95% confidence intervals were computed using 10,000 bootstraps [@Steinhorst2004]. Emigrant abundance estimates do not account for periods where the trap was not in operation.
+where $\hat{N}$ is the estimate of abundance in a given season or year, $i$ is season, $c_i$ is the number of all unique fish captures in season $i$, $m_i$ is the number of tagged fish released in season $i$, and $r_i$ is the number of recaptures in season $i$ [@Bailey1951]. The estimator is computed using an interative maximization of the log likelihood [@Steinhorst2004]. The method assumes that fish are captured independently with probability $p$ (equivalent to trap efficiency) and tagged fish mix thoroughly with untagged fish. The 95% confidence intervals were computed using 10,000 bootstraps [@Steinhorst2004]. Emigrant abundance estimates do not account for periods where the trap was not in operation. DSR abundance includes both parr and presmolt abundance whereas NRR abundance includes only smolts.
+
+
+## Body Condition
+
+We investigated differences in fork length (mm) and Fulton's body condition factor $K$ [@Fulton1904] between DSR and NRR Chinook salmon captured at the lower Lemhi rotary screw trap (LLRTP). Fulton's body condition factor $K$ is estimated as:
+
+$$
+K = \frac{10^NW}{L^3}
+$$
+
+where $W$ is the weight in grams and $L$ is the fork length of the fish in millimeters. $N$ is a constant for normalizing $K$ within reasonable values; we used an $N=5$ which is typical for salmonids. 
 
 
 ## Arrival Timing
 
-We also investigated the difference in arrival timing between DSR and NRR Chinook salmon to Lower Granite Dam as juveniles, to Bonneville Dam as juveniles, and further, back to Bonneville Dam as adults. This relies on tags that were detected at GRJ, BOJ, or BON, respectively. We converted the dates of detection to Julian day, and calculated the mean arrival day for each life-history type / brood year combination. We then took the mean of each life-history type across brood years. This was all done based on detections at Bonneville, not the consolidated nodes described in the [Survival](#survival) section.
+We also investigate the difference in arrival timing between DSR and NRR Chinook salmon to Lower Granite Dam as juveniles, to Bonneville Dam as juveniles, and further, back to Bonneville Dam as adults. Our assessment of arrival timing relies on tags that were detected at GRJ, BOJ, or BON, respectively. We converted the dates of detection to Julian day, and calculated the mean arrival day for each life-history strategy and brood year combination. We then estimated the mean arrival day of each strategy across all brood years. For arrivals at Bonneville, detections were based only observations at Bonneville Dam, not using the consolidated nodes as described in the [Survival](#survival) section. We hypothesize that DSR juveniles will arrive to LGR and BOJ sooner due to starting closer to those locations in the spring; however, we expect no difference in arrival timing of adults to Bonneville Dam after their duration in the ocean.
 
 
 ## Survival
 
-We estimated survival with a Cormack-Jolly-Seber (CJS) model [@Lebreton1992]. We consolidated all the detection sites from the lower Lemhi River RST (LLRTP) into 6 "nodes":
+We estimated survival with a Cormack-Jolly-Seber (CJS) model [@Lebreton1992]. We consolidated all the detection sites from the lower Lemhi River RST (LLRTP) and downstream into 6 "nodes":
 
-* LLRTP (lower Lemhi screw trap)
+* LLRTP (lower Lemhi River screw trap)
 * GRJ (juvenile detections at Lower Granite)
 * BOJ (juvenile detections at Bonneville)
 * BON (adult detections at Bonneville)
@@ -271,53 +333,26 @@ We anticipated that the survival between LLRTP and GRJ would be higher for smolt
 
 # Results
 
-## Data
-
-```{r lem-size-date-fig, fig.cap = "Separation of natal-reach rearing (NRR) and downstream-rearing (DSR) types of Chinook salmon based on length and time of capture at the lower Lemhi rotary screw trap, brood years 2004-2019."}
-lem_rst_tags = read_rds(here("analysis/data/derived_data/lemhi_rst_tags_cleaned.rds"))
-
-# size and time plot by strategy (DSR, NRR)
-strategy_p = lem_rst_tags %>%
-  select(tag_code,
-         brood_year,
-         date,
-         length,
-         emig_stage,
-         strategy) %>%ggplot(aes(x = as.Date(yday(date), "1900-01-01"),
-             y = length)) +
-  geom_point(aes(
-    #shape = factor(strategy),
-    color = factor(strategy))) +
-  geom_vline(xintercept = as.Date("1900-06-30")) +
-  geom_vline(xintercept = as.Date("1900-09-01")) +
-  scale_color_manual(name = "Strategy",
-                     values = c("orangered2", "dodgerblue2")) +
-  scale_x_date(date_breaks = "months",
-               date_labels = "%b") +
-  theme_classic() +
-  labs(x = "Date Tagged",
-       y = "Fork Length (mm)") +
-  theme(axis.title.x = element_text(size = 11,
-                                    color = "black"),
-        axis.title.y = element_text(size = 11,
-                                    color = "black"),
-        axis.text.x = element_text(size = 11,
-                                   color = "black"),
-        axis.text.y = element_text(size = 11,
-                                   color = "black"),
-        #legend.position = c(0.5, 0.9)
-        legend.position = "top")
-strategy_p
-
-```
-
-
 ## Abundance
 
 ```{r abund-tab}
 # abundance table by life stage
 abund_tab = read_excel(here("analysis/data/derived_data/LLRTP_Emigrant_Abundance_20220404.xlsx"),
                        sheet = 1)
+
+# entire abundance table
+all_abund_tab = abund_tab %>%
+  mutate_if(is.character,
+            as.numeric) %>%
+  mutate(`Brood Year` = as.character(`Brood Year`)) %>%
+  rename(`Total LCI` = `Total LB`,
+         `Total UCI` = `Total UB`) %>%
+  kbl(caption = "Estimates of emigrant abundance by life stage and brood year at the lower Lemhi rotary screw trap (LLRTP). Table provided by Idaho Department of Fish and Game (S. Meyer, personal communication, April 4, 2022).",
+      format.arg = list(big.mark = ",")) %>%
+  kable_styling(position = "center", 
+                full_width = F,
+                bootstrap_options = c("striped", "condensed"))
+all_abund_tab
 
 # abundance table by strategy
 strat_abund_tab = abund_tab %>%
@@ -334,19 +369,60 @@ strat_abund_tab = abund_tab %>%
   adorn_totals() %>%
   mutate(`DSR (%)` = round(DSR / rowSums(select(., DSR, NRR)) * 100, 1),
          `NRR (%)` = round(NRR / rowSums(select(., DSR, NRR)) * 100, 1)) %>%
-  kbl(caption = "Estimates of emigrant abundance by life history strategy and brood year at the lower Lemhi rotary screw trap (LLRTP). DSR emigrant abundances for brood years 2012 and 2013 do not include parr abundance estimates, which were unavailable.",
+  kbl(caption = "Estimates of emigrant abundance by emigrant strategy and brood year at the lower Lemhi rotary screw trap (LLRTP). DSR emigrant abundances for brood years 2012 and 2013 do not include parr abundance estimates, which were unavailable.",
       format.args = list(big.mark = ",")) %>%
-  kable_styling(position = "center", full_width = F)
-strat_abund_tab
+  kable_styling(position = "center", 
+                full_width = F,
+                bootstrap_options = c("striped", "condensed"))
+  strat_abund_tab
+
+```
+
+The DSR life history was more abundant for all years in which abundance by life history was available (Table \@ref(tab:abund-tab)). The percent of DSR ranged from a minimum of 54.2% in BY2013 to a maximum of 87.1% in BY2016. Again, these abundances do not account for periods in which the trap was not in operation due to high flows, icing events, etc. and so estimates of percent DSR or NRR may be biased to an unknown degree.
+
+
+## Body Condition
+
+In every case, NRR juveniles were longer; however, DSR juveniles often had a greater $K$ factor (Figure \@ref(fig:body-cond)).
+
+```{r body-cond, fig.cap = "Boxplots showing the condition factor and length (mm) among brood years, colored by life history strategy."}
+body_p = lem_tags %>%
+  select(tag_code,
+         brood_year,
+         strategy,
+         length,
+         weight) %>%
+  mutate(k_cond = (10^5 * weight) / length^3 ) %>%
+  filter(k_cond != -Inf,
+         k_cond < 2) %>%
+  select(- weight) %>%
+  rename(`Length (mm)` = length,
+         `Condition Factor` = k_cond) %>%
+  pivot_longer(cols = c("Length (mm)", "Condition Factor"),
+               names_to = "metric",
+               values_to = "value") %>%
+  ggplot(aes(x = as.factor(brood_year),
+             y = value,
+             fill = strategy)) +
+  geom_boxplot(outlier.size = 0.3) +
+  facet_wrap(~ metric,
+             nrow = 2,
+             scales = "free") +
+  scale_fill_brewer(palette = "Set2",
+                    name = "Strategy") +
+  theme(legend.position = "top") +
+  labs(x = "Value",
+       y = "Brood Year")
+body_p
 
 ```
 
 
 ## Arrival Timing
 
-Boxplots showing the distribution of observed arrival timing for all brood years are shown in Figure \@ref(fig:run-timing), and the average difference between mean DSR and NRR arrivals at each location is shown in Table \@ref(tab:jday-tab).
+DSR juveniles arrive at both Lower Granite Dam and Bonneville Dam at an earlier date than NRR juveniles for all brood years in which comparisons were available (Figure \@ref(fig:run-timing)). Comparisons were not possible for brood years 2010 and 2011. However, that relationship did not hold for arrival timing of adults to Bonneville Dam after freshwater entry. For the 10 brood years in which comparisons were made, DSR adults arrived sooner at Bonneville Dam in six years whereas NRR adults arrived sooner in four. 
 
-```{r run-timing, fig.cap = "Boxplots showing the range of arrival timing to Lower Granite as juveniles, Bonneville as juveniles and Bonneville again as adults, colored by life history."}
+```{r run-timing, fig.cap = "Boxplots showing the range of arrival timing to Lower Granite as juveniles, Bonneville as juveniles and Bonneville again as adults, colored by life history strategy."}
 jday_p = obs_df %>%
   select(brood_year,
          llrtp_start) %>%
@@ -361,6 +437,7 @@ jday_p = obs_df %>%
                                   "Bonneville - Juv.",
                                   "Bonneville - Adult"))) %>%
   mutate(min_jday = yday(min_det)) %>%
+  filter(!is.na(strategy)) %>%
   ggplot(aes(x = min_jday,
              y = fct_rev(as.factor(brood_year)),
              fill = strategy)) +
@@ -378,12 +455,15 @@ jday_p
 
 ```
 
+On average, DSR juveniles from the Lemhi River arrived at Lower Granite Dam 15 days earlier and at Bonneville Dam a week earlier than NRR juveniles (Table \@ref(tab:jday-tab)). However, the difference was only 2 days for adults at Bonneville Dam after freshwater entry. Differences in adult arrival timing at Bonneville Dam could potentially be influence by ocean-age composition differences in the strategies; however, we did not account for those here.
+
 ```{r jday-tab}
 jday_tab = obs_df %>%
   select(brood_year,
          llrtp_start) %>%
   unnest(llrtp_start) %>%
   filter(node %in% c("GRJ", "BOJ", "BON")) %>%
+  filter(!is.na(strategy)) %>%
   mutate(node = recode(node,
                        "GRJ" = "Lower Granite",
                        "BOJ" = "Bonneville - Juv.",
@@ -424,7 +504,7 @@ jday_tab
 
 ## Survival
 
-Estimates of survival between each detection point are shown in \@ref(fig:surv-post-fig).
+Juvenile NRR emigrants from the Lemhi River survived at a higher rate than DSR juveniles to Lower Granite Dam for all brood years where comparisons were possible except for BY2008 (upper-left facet, Figure \@ref(fig:surv-post-fig)) which was expected because NRR survival rates do not include mortality during winter months. However, differences in survival were less apparent for juveniles between Lower Granite Dam and Bonneville Dam where NRR emigrants had greater survival for only 7 of 12 brood years where comparisons were available (upper-right facet, Figure \@ref(fig:surv-post-fig)). NRR juveniles appeared to have higher ocean survival in earlier years (BY2004 - 2009), but differences are less apparent in BY2012 and after (lower-left facet, Figure \@ref(fig:surv-post-fig))
 
 ```{r surv-post-fig, fig.cap = "Boxplots showing posteriors of survival probability between detection sites, colored by life history. Boxes represent the middle 50% of the posterior draws and the median is shown by the bisecting line. Whiskers show range of values within 1.5 times the interquartile range. Outliers are represented by points."}
 surv_p = stan_df %>%
@@ -466,7 +546,7 @@ surv_p = stan_df %>%
                                    hjust = 1),
         legend.position = "bottom") +
   scale_fill_brewer(palette = "Set2",
-                    name = "Life History") +
+                    name = "Strategy") +
   coord_cartesian(ylim = c(0,1)) +
   labs(x = "Brood Year",
        y = "Survival Probability")
@@ -474,7 +554,9 @@ surv_p
 
 ```
 
-```{r delta-fresh, fig.cap = "Boxplots of posteriors of log odds ratios of survival between DSR and NRR tags. Values greater than 0 indicate relatively better survival for DSR fish and less than 0 indicates relatively better survival for NRR fish. Color indicates which life history was favored for that brood year. Boxes represent the middle 50% of the posterior draws and the median is shown by the bisecting line. Whiskers show 95% credible intervals."}
+The NRR life-history strategy had higher relative survival from the lower Lemhi River rotary screw trap to GRJ for all brood years except BY2008 (Figure \@ref(fig:delta-fresh), Table \ref(tab:delta-tab)). The pattern was less apparent looking just at mainstem juvenile survival between GRJ and BOJ; however, evaluating the "entire" juvenile survival from the lower Lemhi River to BOJ, the NRR strategy again had higher relative survival in all years except BY009 (Figure \@ref(fig:delta-fresh), Table \ref(tab:delta-tab)). Higher relative juvenile survival for the NRR strategy from LLRTP to GRJ and BOJ in most years is likely largely due to NRR juveniles having already survived through winter months.
+
+```{r delta-fresh, fig.cap = "Boxplots of posteriors of log odds ratios of survival between DSR and NRR tags. Values greater than 0 indicate relatively better survival for DSR fish and less than 0 indicates relatively better survival for NRR fish. Color indicates which life history strategy was favored for that brood year. Boxes represent the middle 50% of the posterior draws and the median is shown by the bisecting line. Whiskers show 95% credible intervals."}
 favored_p = delta_df %>%
   filter(param %in% c("LLRTP to GRJ",
                       "GRJ to BOJ",
@@ -494,7 +576,7 @@ favored_p = delta_df %>%
                                    hjust = 1),
         legend.position = "bottom") +
   scale_fill_brewer(palette = "Set2",
-                    name = "Favored Life History") +
+                    name = "Favored Strategy") +
   geom_hline(yintercept = 0,
              linetype = 2) +
   labs(x = "Brood Year",
@@ -530,12 +612,59 @@ delta_tab
 
 ```
 
+Interestingly, daily survival rates were higher for DSR emigrants for 7 of 12 brood years (Figure \@ref(fig:daily-surv-p)) which is in slight contrast to results for overall juvenile survival to downstream locations. 
+
+```{r daily-surv-p, fig.cap = "Juvenile survival to Lower Granite Dam between DSR and NRR tags, scaled temporally by days i.e., daily survival rates by brood year for juveniles tagged at the lower Lemhi River rotary screw trap."}
+# daily survival rates
+dodge_width = 0.4
+daily_surv_p = model_df %>%
+  select(brood_year,
+         pred) %>%
+  unnest(pred) %>%
+  mutate(strategy = if_else(is.na(strategy) & brood_year == 2010,
+                            "DSR",
+                            if_else(is.na(strategy) & brood_year == 2011,
+                                    "NRR",
+                                    as.character(strategy)))) %>%
+  mutate(across(strategy,
+                as_factor)) %>%
+  filter((param == "Phi" & occ == 1)) %>%
+  filter(!is.na(strategy)) %>%
+  select(-se) %>%
+  left_join(travel_time) %>%
+  mutate(across(c(estimate, lcl, ucl),
+                ~ . ^ (1/grj_time_mean))) %>%
+  ggplot(aes(x = brood_year,
+             y = estimate,
+             color = strategy,
+             fill = strategy)) +
+  geom_errorbar(aes(ymin = lcl,
+                    ymax = ucl),
+                width = 0.3,
+                position = position_dodge(width = dodge_width)) +
+  geom_point(size = 4,
+             position = position_dodge(width = dodge_width)) +
+  scale_color_brewer(palette = "Set2",
+                     name = "Strategy") +
+  scale_fill_brewer(palette = "Set2",
+                    name = "Strategy") +
+  theme(legend.position = "bottom") +
+  coord_cartesian(ylim = c(0.9, 1)) +
+  labs(x = "Brood Year",
+       y = "Probability",
+       title = "Daily Survival Rate")
+daily_surv_p
+
+```
 
 ## Smolt-to-Adult Return Rates (SAR)
+
+The SARs favored the DSR strategy during early cohorts (BY2004 - BY2008), but NRR emigrants during later cohorts (BY2009 - BY2017) (Figure \@ref(fig:delta-sar)). However, differences were only significant in one case where GRJ -> BON SARs favored the NRR strategy in BY2006 (Table \@ref(tab:delta-sar-tab)).
 
 ```{r delta-sar, fig.cap = "Boxplots of posteriors of log odds ratios of SARs between DSR and NRR tags. Values greater than 0 indicate relatively better survival for DSR fish and less than 0 indicates relatively better survival for NRR fish. Color indicates which life history was favored for that brood year. Boxes represent the middle 50% of the posterior draws and the median is shown by the bisecting line. Whiskers show 95% credible intervals."}
 delta_sar_p = delta_df %>%
   filter(grepl("SAR", param)) %>%
+  mutate(winner = replace_na(winner, "Toss-Up")) %>%
   ggplot(aes(x = brood_year)) +
   geom_boxplot(aes(ymin = `2.5%`,
                    lower = `25%`,
@@ -560,7 +689,7 @@ delta_sar_p
 
 ```
 
-```{r}
+```{r delta-sar-tab}
 delta_sar_tab = delta_df %>%
   filter(str_detect(param, "SAR")) %>%
   mutate(odds_ratio = exp(mean),
