--- a/analysis/markdown/AckermanLibrary.bib
+++ b/analysis/markdown/AckermanLibrary.bib
@@ -411,6 +411,23 @@
   file = {C\:\\Users\\mikea\\Zotero\\storage\\EIPBZ6WL\\Bellinger et al. - 2015 - Geo-Referenced, Abundance Calibrated Ocean Distrib.pdf;C\:\\Users\\mikea\\Zotero\\storage\\RRJLSJLP\\Bellinger et al. - 2015 - Geo-Referenced, Abundance Calibrated Ocean Distrib.pdf}
 }
 
+@article{Bellmore2017,
+  title = {Incorporating Food Web Dynamics into Ecological Restoration: A Modeling Approach for River Ecosystems},
+  shorttitle = {Incorporating Food Web Dynamics into Ecological Restoration},
+  author = {Bellmore, J. Ryan and Benjamin, Joseph R. and Newsom, Michael and Bountry, Jennifer A. and Dombroski, Daniel},
+  year = {2017},
+  month = apr,
+  journal = {Ecological Applications},
+  volume = {27},
+  number = {3},
+  pages = {814--832},
+  issn = {10510761},
+  doi = {10.1002/eap.1486},
+  abstract = {Restoration is frequently aimed at the recovery of target species, but also influences the larger food web in which these species participate. Effects of restoration on this broader network of organisms can influence target species both directly and indirectly via changes in energy flow through food webs. To help incorporate these complexities into river restoration planning, we constructed a model that links river food web dynamics to in-\-stream physical habitat and riparian vegetation conditions. We present an application of the model to the Methow River, Washington, USA, a location of on-g\- oing restoration aimed at recovering salmon. Three restoration strategies were simulated: riparian vegetation restoration, nutrient augmentation via salmon carcass addition, and side channel reconnection. We also added populations of nonnative aquatic snails and fish to the modeled food web to explore how changes in food web structure mediate responses to restoration. Simulations suggest that side channel reconnection may be a better strategy than carcass addition and vegetation planting for improving conditions for salmon in this river segment. However, modeled responses were strongly sensitive to changes in the structure of the food web. The addition of nonnative snails and fish modified pathways of energy through the food web, which negated restoration improvements. This finding illustrates that forecasting responses to restoration may require accounting for the structure of food webs, and that changes in this structure, as might be expected with the spread of invasive species, could compromise restoration outcomes. Unlike habitat-\-based approaches to restoration assessment that focus on the direct effects of physical habitat conditions on single species of interest, our approach dynamically links the success of target organisms to the success of competitors, predators, and prey. By elucidating the direct and indirect pathways by which restoration affects target species, dynamic food web models can improve restoration planning by fostering a deeper understanding of system connectedness and dynamics.},
+  langid = {english},
+  file = {C\:\\Users\\mikea\\Zotero\\storage\\7W8FXTXX\\Bellmore et al. - 2017 - Incorporating food web dynamics into ecological re.pdf}
+}
+
 @article{Bernatchez2017,
   title = {Harnessing the {{Power}} of {{Genomics}} to {{Secure}} the {{Future}} of {{Seafood}}},
   author = {Bernatchez, Louis and Wellenreuther, Maren and Araneda, Cristi{\'a}n and Ashton, David T. and Barth, Julia M.I. and Beacham, Terry D. and Maes, Gregory E. and Martinsohn, Jann T. and Miller, Kristina M. and Naish, Kerry A. and Ovenden, Jennifer R. and Primmer, Craig R. and Young Suk, Ho and Therkildsen, Nina O. and Withler, Ruth E.},
@@ -1413,6 +1430,16 @@
   file = {C\:\\Users\\mikea\\Zotero\\storage\\DUT5D89M\\Fullerton et al. - 2016 - Setting spatial conservation priorities despite in.pdf}
 }
 
+@article{Fulton1904,
+  title = {The Rate of Growth of Fishes.},
+  author = {Fulton, T.W.},
+  year = {1904},
+  journal = {20th Annual Report of the Fishery Board of Scotland},
+  volume = {1902},
+  number = {3},
+  pages = {326--446}
+}
+
 @article{Gadomski2001,
   title = {Early Life History of the {{Northern Pikeminnow}} in the Lower {{Columbia River}} Basin.},
   author = {Gadomski, D.M. and Barfoot, C.A. and Bayer, J.M. and Poe, T.P.},
@@ -1981,6 +2008,22 @@
   abstract = {We developed a hierarchical Bayesian model (HBM) to estimate missing counts of Chinook salmon (Oncorhynchus tshawytscha (Walbaum in Artedi, 1792)) at a weir on the Kogrukluk River, Alaska, between 1976 and 2015. The model assumed that fish passage during a breach of the weir was typical of passage during normal operations. Counts of fish passing the weir were missing for some days during the runs, or only partial counts for a given 24-hour period were available. The HBM approach provided more defensible estimates of missing data and total escapement than ad hoc or year-by-year model estimates, because estimates of passage for a given year were informed not only by counts for the current year, but also by counts for all previous years. The results of the HBM yielded less variable estimates of escapement than did ad hoc or year-by-year model estimates. The HBM represents a standardized approach to estimate missing counts and total escapement and eliminates the need for ad hoc estimates of missing counts. The model also provides managers with a measure of uncertainty around estimates of escapement and around estimates of hyper-parameters to define run curves in subsequent years with incomplete fish counts.},
   langid = {english},
   file = {C\:\\Users\\mikea\\Zotero\\storage\\FZYQI4Q5\\Jasper et al. - 2018 - Hierarchical Bayesian estimation of unobserved sal.pdf}
+}
+
+@article{Jeffres2008,
+  title = {Ephemeral Floodplain Habitats Provide Best Growth Conditions for Juvenile {{Chinook}} Salmon in a {{California}} River},
+  author = {Jeffres, Carson A. and Opperman, Jeff J. and Moyle, Peter B.},
+  year = {2008},
+  month = dec,
+  journal = {Environmental Biology of Fishes},
+  volume = {83},
+  number = {4},
+  pages = {449--458},
+  issn = {0378-1909, 1573-5133},
+  doi = {10.1007/s10641-008-9367-1},
+  abstract = {We reared juvenile Chinook salmon for two consecutive flood seasons within various habitats of the Cosumnes River and its floodplain to compare fish growth in river and floodplain habitats. Fish were placed in enclosures during times when wild salmon would naturally be rearing in floodplain habitats. We found significant differences in growth rates between salmon reared in floodplain and river enclosures. Salmon reared in seasonally inundated habitats with annual terrestrial vegetation experienced higher growth rates than those reared in a perennial pond on the floodplain. Growth of fish in the non-tidal river upstream of the floodplain varied with flow in the river. When flows were high, there was little growth and high mortality, but when the flows were low and clear, the fish grew rapidly. Fish displayed very poor growth in tidally influenced river habitat below the floodplain, a habitat type to which juveniles are commonly displaced during high flow events due to a lack of channel complexity in the mainstem river. Overall, ephemeral floodplain habitats supported higher growth rates for juvenile Chinook salmon than more permanent habitats in either the floodplain or river. Variable responses in both growth and mortality, however, indicate the importance of providing habitat complexity for juvenile salmon in floodplain reaches of streams, so fish can find optimal places for rearing under different flow conditions.},
+  langid = {english},
+  file = {C\:\\Users\\mikea\\Zotero\\storage\\E9PX2WWG\\Jeffres et al. - 2008 - Ephemeral floodplain habitats provide best growth .pdf}
 }
 
 @article{Jenkins2018,
